[FIX] web_editor: prevent grid item inner row child from overflowing
Steps to reproduce:
- In edit mode, drop the "Team" snippet.
- Toggle it to grid mode.
- Set the "Content Width" option to "Full".
=> A horizontal scrollbar appears.

Other case:
- Go to the `/contactus` page.
- In edit mode, toggle the snippet with the "Form" in it to grid mode.
- Go in mobile view.
=> There is a horizontal scrollbar.

This happens because the `.row` elements generally have a `--gutter-x`
CSS variable set to 30px that is used to compute their horizontal
margins, such that it compensates the padding of the parent (generally a
`.container` element) which is set to the same value. So the parent is
supposed to always have a padding of 15px, which is compensated by the
row margins, set to -15px.

When a row is a direct child of a grid item, the row can overflow its
parent if the grid item has a padding below 15px. Indeed, the row
expects its parent to have a 15px padding, so its margins are too big if
the value is below. A horizontal scrollbar can therefore appear, if the
snippet container takes the whole screen width.

The same happens with the first row inside a grid item (not necessarily
a direct child) when in mobile view (this is the issue described in the
second set of steps to reproduce). It happens since commit [1], which
modified the grid `--grid-gutter-x` rule for mobile.

This commit fixes these issues by making the margins of the row elements
that are the first inner row of a grid item compensate the padding of
this grid item, while it is below 15px. When it is set to 15px or above,
they are back compensating the usual 15px.

[1]: https://github.com/odoo/odoo/commit/710d000f1872fd99b41d52ec3d6923756bba7cba

opw-4052853
opw-3981579

closes odoo/odoo#176975

X-original-commit: d7c2f8b4a3535f5c15043226a296d10be4208cec

--- a/addons/web_editor/static/src/scss/web_editor.frontend.scss
+++ b/addons/web_editor/static/src/scss/web_editor.frontend.scss
@@ -55,6 +55,19 @@
     > * {
         padding: var(--grid-item-padding-y) var(--grid-item-padding-x) !important;
     }
+
+    // Adapt the horizontal margins of the first inner row of a grid item, to
+    // make them compensate the grid item horizontal padding (to avoid an
+    // overflow).
+    .o_grid_item .row {
+        --grid-inner-row-gutter-x: clamp(0px, 2 * var(--grid-item-padding-x), 30px);
+        margin-left: calc(-0.5 * var(--grid-inner-row-gutter-x));
+        margin-right: calc(-0.5 * var(--grid-inner-row-gutter-x));
+
+        .row {
+            --grid-inner-row-gutter-x: var(--gutter-x);
+        }
+    }
 }
 
 @include media-breakpoint-up(lg) {
